--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:AxQIjGNHV591exEkdYTP6g5MBQmIKccCC5K5F9ailF8=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,6 +9,8 @@ APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
+
+APP_MAINTENANCE_STORE=file
 # APP_MAINTENANCE_STORE=database
 
 PHP_CLI_SERVER_WORKERS=4
@@ -20,12 +22,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=pgsql
+DB_HOST=ep-small-star-a8l5kjp9-pooler.eastus2.azure.neon.tech
+DB_PORT=5432
+DB_DATABASE=neondb
+DB_USERNAME=neondb_owner
+DB_PASSWORD=npg_UTe3rZitlkJ9
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -37,11 +39,11 @@ BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
-CACHE_STORE=database
+# CACHE_STORE=database
 # CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
-
+CACHE_DRIVER=array
 REDIS_CLIENT=phpredis
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
@@ -63,3 +65,6 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+
+FILESYSTEM_DISK=local
